--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -8,9 +9,10 @@ body {
   box-sizing: border-box;
 }
 
-a{
+a {
   text-decoration: none;
 }
+
 
 a:visited{
   cursor: pointer;
