--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,10 +1,13 @@
-header{
+header {
+    width: 100%;
     height: 70px;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
     box-shadow: 0px 1px 10px 1px rgba(0,0,0,0.1) inset;
+    z-index: 9;
 }
 
 header img {
