--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,7 +1,7 @@
 header {
     width: 100%;
     height: 70px;
-    position: fixed;
+    /* position: fixed; */
     display: flex;
     justify-content: space-between;
     align-items: center;
