refactory name items, optimaze mock component

--- a/src/components/TourItem/style.css
+++ b/src/components/TourItem/style.css
@@ -1,21 +1,21 @@
-.market-item {
+.tour-item {
     position: relative;
     width: 18%;
     height: 220px;
+    margin:2%;
     background: #fff;
     border: 1px solid #c9c9c9c9;
     border-radius: 5%;
-    margin:2%;
     transition: all 0.2s;
   }
   
-  .market-item:hover {
+  .tour-item:hover {
     cursor: pointer;
     border: 1px solid #349A89;
     box-shadow: 0 0 10px rgb(148, 151, 151);
   }
   
-  .market-item img {
+  .tour-item img {
     width: 100%;
     height: 70%;
     border-top-left-radius: 5%;
@@ -36,13 +36,13 @@
     color:rgb(81, 216, 193)
   }
   
-  .market-item h5 {
+  .tour-item h5 {
     font-weight: 400;  
     margin: 0;
     padding: 5px;
   }
   
-  .market-item h4 {
+  .tour-item h4 {
     margin: 0;
     padding-left: 5px;
     padding-bottom: 5px;
