--- a/src/components/TourMarket/style.css
+++ b/src/components/TourMarket/style.css
@@ -1,4 +1,4 @@
-.market-container {
+.tour-market-container {
   width: 100%;
   height: 89vh;
   display: flex;
@@ -9,24 +9,24 @@
   overflow-x: hidden;
 }
 
-.modal-error {
+.tour-market-modal-error {
   margin-top: 30px;
   text-align: center;
 }
 
-.market-container::-webkit-scrollbar-track
+.tour-market-container::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0.3);
 	background-color: #d6d6d6;
 }
 
-.market-container::-webkit-scrollbar
+.tour-market-container::-webkit-scrollbar
 {
 	width: 6px;
 	background-color: rgb(160, 46, 46);
 }
 
-.market-container::-webkit-scrollbar-thumb
+.tour-market-container::-webkit-scrollbar-thumb
 {
 	background-color: #959393;
 }
