--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,28 +1,26 @@
 header {
-    width: 100%;
-    height: 70px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+    position: relative;
+    padding:20px;
     box-shadow: 0px 1px 10px 1px rgba(0,0,0,0.1) inset;
-    z-index: 9;
 }
 
-header img {
-    margin-left: 30px;
+.logo {
+
 }
 
 
 .header-nav {
-    width: 35%;
+    position:absolute;
+    top:20px;
+    right: 30px;
+    width: 25%;
     display:flex;
     justify-content: space-between;
     align-items: center;
-    margin-right: 30px;
 }
 
 .single {
+    top:28px;
     justify-content: flex-end;
 }
 
