--- a/src/components/TourMarket/style.css
+++ b/src/components/TourMarket/style.css
@@ -1,6 +1,7 @@
 .tour-market-container {
+  /* border: 1px solid red; */
   width: 100%;
-  height: 89vh;
+  height: 75vh;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
