--- a/src/components/Register/style.css
+++ b/src/components/Register/style.css
@@ -1,17 +1,9 @@
-.register-form{
-    position: absolute;
+.register {
     width: 420px;
     top:55%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    background: #fff;
-    padding: 20px;
-    border-radius:5px;
-    box-shadow:0px 2px 42px 
-    rgba(0,0,0,0.111233);
 }
 
-.log-in{
+.log-in {
     text-align: center;
 }
 
@@ -26,7 +18,7 @@
     font-size: 15px;
 }
 
-.login-form-label span{
+.apiko-form-label span{
     text-transform: lowercase;
     font-size: 12px;
     color:#8c8c8c;
