--- a/src/components/InputGroup/style.css
+++ b/src/components/InputGroup/style.css
@@ -21,3 +21,26 @@
 .apiko-form-input:focus{
   border-bottom: 1px solid #349A89;
 }
+
+/******STATUS BLOCK ******/
+.form-status-icon {
+  width: 20px;
+  position: relative;
+  float: right;
+  right: 15px;
+  bottom: 43px;
+  padding: 0;
+  margin: 0;
+}
+
+.form-status-icon i {
+  position: absolute;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
