--- a/src/components/SearchBlock/style.css
+++ b/src/components/SearchBlock/style.css
@@ -29,7 +29,7 @@
 
 .ant-select-selection, .ant-select-selection--single {
   width: 130px;
-  height: 36px;
+  height: 36px !important;
   padding-top: 2px;
   outline: none;
   border: 1px solid #000;
