--- a/src/components/Sell/style.css
+++ b/src/components/Sell/style.css
@@ -10,7 +10,7 @@
 }
 
 .location-select > div {
-  width: 98%;
+  width: 100%;
   outline: none;
   color: #000;
 }
@@ -31,6 +31,23 @@
   border: 1px solid #DEDEE0;
   transition: 0.3s ease;
   outline: none;
+}
+
+.description textarea::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 0 rgba(0,0,0,0.3);
+	background-color: #d6d6d6;
+}
+
+.description textarea::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: rgb(160, 46, 46);
+}
+
+.description textarea::-webkit-scrollbar-thumb
+{
+	background-color: #959393;
 }
 
 .description textarea:hover{
